# cutemaze

./: .gitignore  CMakeLists.txt  CREDITS  ChangeLog  NEWS  README  cutemaze.pro  mac_deploy.sh  windows_deploy.bat
doc/: cutemaze.6
icons/: cutemaze.appdata.xml  cutemaze.appdata.xml.in  cutemaze.desktop  cutemaze.desktop.in  cutemaze.icns  cutemaze.xpm  icon.qrc  icon.rc  icons.qrc
icons/oxygen/scalable/: games-highscores.svgz
icons/po/: LINGUAS  cs.po  de.po  description.pot  el.po  eo.po  es.po  fi.po  fr.po  he.po  it.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  tr.po  update-po.sh  update-pot.sh  zh.po
mac/: Info.plist.in
preview/: preview.qrc
src/: board.cpp  board.h  cell.cpp  cell.h  locale_dialog.h  main.cpp  maze.cpp  maze.h  new_game_dialog.cpp  new_game_dialog.h  path.cpp  path.h  scores.cpp  scores.h  scores_dialog.cpp  scores_dialog.h  settings.cpp  settings.h  solver.cpp  solver.h  theme.cpp  theme.h  window.cpp  window.h
themes/: theme.qrc
translations/: cutemaze_cs.qm  cutemaze_cs.ts  cutemaze_de.qm  cutemaze_de.ts  cutemaze_el.ts  cutemaze_en.ts  cutemaze_eo.ts  cutemaze_es.qm  cutemaze_es.ts  cutemaze_fi.ts  cutemaze_fr.qm  cutemaze_fr.ts  cutemaze_he.qm  cutemaze_he.ts  cutemaze_it.ts  cutemaze_lt.qm  cutemaze_lt.ts  cutemaze_nl.qm  cutemaze_nl.ts  cutemaze_pl.qm  cutemaze_pl.ts  cutemaze_pt.ts  cutemaze_pt_BR.qm  cutemaze_pt_BR.ts  cutemaze_ro.qm  cutemaze_ro.ts  cutemaze_ru.qm  cutemaze_ru.ts  cutemaze_tr.qm  cutemaze_tr.ts  cutemaze_zh.ts
windows/: installer.nsi  removeprevious.nsh
